# atlas

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  atlas.code-workspace  atlasgen_manual_en.md  atlassim_manual_en.md  climatemap.xcf  default.genfile.toml
atlas_gen/: Cargo.toml  build.rs  icon.blend
atlas_gen/src/: event.rs  main.rs
atlas_gen/src/config/: climate.rs  climate_structs.rs  common.rs  common_structs.rs  config.rs  config_enums.rs  conversions.rs  io.rs  latitudinal.rs  main_structs.rs  mod.rs  plugin.rs  resource.rs
atlas_gen/src/event/: plugin.rs
atlas_gen/src/map/: events.rs  generation.rs  internal.rs  mod.rs  plugin.rs  samplers.rs
atlas_gen/src/ui/: internal.rs  mod.rs  panel_climate.rs  panel_continents.rs  panel_general.rs  panel_topography.rs  panels.rs  plugin.rs  ui.rs  utils.rs
atlas_gen/src/ui/advanced/: continents.rs
atlas_gen/src/ui/general/: general.rs  mod.rs
atlas_gen/src/ui/panel/: climate.rs  continents.rs  general.rs  humidity.rs  mod.rs  panel.rs  precipitation.rs  resources.rs  temperature.rs  topography.rs
atlas_gen/src/ui/panel/advanced/: continents.rs  mod.rs
atlas_gen/src/ui/panel/simple/: climate.rs  continents.rs  mod.rs  resources.rs  topography.rs
atlas_gen/src/ui/simple/: climate.rs  mod.rs  resources.rs  topography.rs
atlas_lib/: Cargo.toml
atlas_lib/src/: lib.rs
atlas_lib/src/base/: events.rs  map.rs  mod.rs  ui.rs
atlas_lib/src/config/: climate.rs  deposit.rs  io.rs  mod.rs
atlas_lib/src/config/sim/: defaults.rs  mod.rs
atlas_lib/src/domain/: graphics.rs  map.rs  mod.rs
atlas_lib/src/ui/: control.rs  generic.rs  macros.rs  make_ui.rs  mod.rs  plugin_base.rs  sidebar.rs
atlas_macro/: Cargo.toml
atlas_macro/src/: lib.rs
atlas_sim/: Cargo.toml  build.rs  icon.blend  icon.blend1
atlas_sim/src/: event.rs  main.rs
atlas_sim/src/config/: climate.rs  main_structs.rs  mod.rs  resource.rs  rules.rs
atlas_sim/src/map/: events.rs  internal.rs  mod.rs
atlas_sim/src/sim/: civ.rs  conflict.rs  mod.rs  polity.rs  region.rs  ui.rs
atlas_sim/src/ui/: internal.rs  mod.rs  panel_init.rs  panel_sim.rs
atlas_sim/src/ui/panel/: civs.rs  climate.rs  general.rs  mod.rs  panel.rs  polities.rs  rules.rs  scenario.rs  sim_polities.rs
atlas_sim/src/ui/panel_sim/: civ.rs  misc.rs  mod.rs  polity.rs
extra/: cru_converter.py
old_src/files/: mod.rs
src/: main.rs
src/camera/: mod.rs
src/components/: position.rs
src/files/: file.rs  genfile.rs
src/plugins/: file.rs  hello_world.rs  mod.rs  worldgen.rs
src/sim/: mod.rs
src/structs/: genfile.rs  mod.rs
src/systems/: example_system.rs  mod.rs
src/world/: mod.rs
