[workspace]
members = [
    "atlas_lib",
    "atlas_gen",
    "atlas_sim",
    "atlas_macro",
]
resolver = "2"

package.readme = "README.md"
package.rust-version = "1.56"
package.license = "MIT"
package.authors = ["Bartłomiej \"Morton\" Moroz"]
package.homepage = "https://github.com/MortonPL/atlas"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
