[package]
name = "atlas_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas_lib = { path = "../atlas_lib" }
bevy = { version = "0.12.0" }#features = ["dynamic_linking"] }
bevy_egui = "0.24.0"
documented = "0.2.0"
noise = "0.8.2"
rand = "0.8.5"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_with = "3.0.0"
toml = "0.7.4"
