[package]
name = "atlas_gen"
version = "0.1.0"
edition = "2021"
description = "A map generator application for the Atlas project"

readme.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
atlas_lib = { path = "../atlas_lib" }     # inhouse common library
noise = "0.8.2"                           # noise generation
