[package]
name = "atlas_macro"
version = "1.0.0"
edition = "2021"
description = "A crate with procedural macros for the Atlas project"

readme.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.75"
syn = "2.0.0"
quote = "1.0.35"
