[package]
name = "atlas_sim"
version = "0.1.0"
edition = "2021"
description = "Atlas: history simulation software"

readme.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
atlas_lib = { path = "../atlas_lib" }     # inhouse common library
bevy_mod_picking = "0.19"                 # pickable (clickable) entities
weighted_rand = "0.4.2"                   # weighted random choice

[build-dependencies]
winresource = "0.1.17"                    # set resource icon
