[package]
name = "atlas_sim"
version = "1.0.0"
edition = "2021"
description = "Atlas: history simulation software"

readme.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
atlas_lib = { path = "../atlas_lib" }     # inhouse common library

[build-dependencies]
winresource = "0.1.17"                    # set resource icon
